# sdl-examples

./: .gitignore  CMakeLists.txt  ReadMe.md
blending/: TGA.cpp  TGA.hpp  TGALoader.hpp  main.cpp
core/: SDLProgram.cpp  SDLProgram.hpp  SDLRenderer.cpp  SDLRenderer.hpp
resources/: blue.tga  overpass-graffiti.tga  overpass-graffiti.xcf  particle.tga  particle.xcf  random.tga  small-blue-area.tga  small-blue-area.xcf  small-red-box.tga  small-red-box.xcf
scripts/: build-macos.sh
